# fastAPI-template

./: README.org
nixos/: README.md  main.py  pyproject.toml  shell.nix
